# agent-runtime-python

./: .env.example  .gitignore  main.py  pyproject.toml
src/: rag_v1_naive.py
src/cdss_rag/: main.py
src/cdss_rag/agent/: loop.py  prompts.py  tools.py
src/cdss_rag/api/: chat.py  health.py  ingest.py  kb.py  retrieve.py
src/cdss_rag/core/: config.py  db.py  errors.py  logging_conf.py
src/cdss_rag/ingestion/: loader.py  pipeline.py  splitter.py
src/cdss_rag/llm/: deepseek.py  embedding.py
src/cdss_rag/repositories/: chunk_repo.py  document_repo.py  kb_repo.py
src/cdss_rag/schemas/: chat.py  common.py  ingest.py  kb.py  retrieve.py
src/cdss_rag/services/: chat.py  ingestion.py  kb.py  retrieval.py
tests/: test_health.py
