[project]
name = "agent-runtime-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-postgres>=0.0.10",
    "pypdf>=5.0.0",
    "sentence-transformers>=3.0.0",
    "huggingface-hub>=0.20.0",
    "openai>=1.0.0",
    "langchain-pdf>=0.2.0",
    "langchain-huggingface>=1.2.2",
    "cryptography>=49.0.0",
]
