[project]
name = "agent-runtime-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-postgres>=0.0.10",
    "pypdf>=5.0.0",
    "sentence-transformers>=3.0.0",
    "huggingface-hub>=0.20.0",
    "openai>=1.0.0",
    "langchain-pdf>=0.2.0",
    "langchain-huggingface>=1.2.2",
    "cryptography>=49.0.0",
    "fastapi>=0.138.0",
    "uvicorn>=0.49.0",
    "numpy>=2.5.0",
    "psycopg[binary,pool]>=3.3.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 新增 hatch 构建配置，关键修复
[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/cdss_rag"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
